1992-08-25  dickey@software.org

	* src/dlog.c: debug-trace
	modified so that inline history is not saved here
	(still have to make end-stops work with history)

	* src/history.c: debug-trace

	* src/ded.c: special hack so 'cf and 'f commands are the same

	* src/dlog.c: mods to 'dlog_string()' to allow "cf" command's internal
	replay to work.

	* src/inline.c:
	make 'dyn_trim1()' public so I can use it in 'dlog_string()'

1992-08-24  dickey@software.org

	* src/dedline.c: removed obsolete code for 'edittext()'

	* src/dedread.c: allow quit-dlog_string response

1992-08-24  ste_cm@software.org

	* src/dedread.c:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1992-08-24  dickey@software.org

	* src/ftree.c: allow quit-dlog_string as response in '@' command.

	* src/ded.c, src/dedfind.c, src/deddoit.c:
	dlog_string returns null-pointer on quit

1992-08-24  ste_cm@software.org

	* src/deddoit.c:
	BASELINE Thu May  6 14:26:47 1993 -- split from CM_TOOLS #11

1992-08-24  dickey@software.org

	* src/dedline.c: make edittext work with 'dlog_string()'

	* src/dedread.c: dlog_string returns null pointer on quit

	* src/dedtype.c: dlog_string returns null-pointer on quit

	* src/dlog.c: make dlog_string return null pointer on quit

	* src/ftree.c: dlog_string returns null-pointer on quit

	* src/dlog.c: recoded 'read_script()' so it joins lines that were split
	by intervening comment(s).  This allows me to hide the
	difference between single-char and buffer-commands.

1992-08-20  dickey@software.org

	* src/ftree.c: forgot to reinit 'my_text' in ':' command

	* src/dlog.c: testing integration with 'edittext()'

	* src/dedline.c:
	added first cut (ifdef'd) of integration with 'dlog_string()'
	and 'edittext()'

	* src/ded.h, src/inline.c: added 'inline_text()', 'inline_hist()'

1992-08-19  dickey@software.org

	* test/test4.cmd:
	change to accommodate inline treatment in 'wrawgets()' for ftree '=' command

1992-08-17  dickey@software.org
