@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920825
+MANIFEST for ded, version t19920826
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
